# esp32-testing

./: .gitignore  .gitmodules  create-project
blink/: sdkconfig  sdkconfig.old
esp_http_client/main/: CMakeLists.txt  app_wifi.c  app_wifi.cpp  app_wifi.h  esp_http_client_example.cpp
hal/: CMakeLists.txt  CMakeLists.txt.old  sdkconfig
hal/libhal/: CMakeLists.txt  sdkconfig
hal/libhal/components/hal/: CMakeLists.txt  GpioPin.cpp  I2SBus.cpp
hal/libhal/components/hal/include/hal/: GpioPin.h  I2SBus.h
hal/libhal/components/main/: main.c
hal/src/main/cpp/: CMakeLists.txt
hal/src/main/cpp/hal/: GpioPin.cpp  GpioPin.h
hal/src/test/cpp/: CMakeLists.txt  GpioTest.cpp  simple.cpp
hal/test/: CMakeLists.txt  GpioTest.cpp  I2STest.cpp
hal/test/include-fake/: base.h  esp_system.h
hal/test/include-fake/driver/: gpio.h  i2s.h
hal/test/include-fake/freertos/: FreeRTOS.h
hal/test/include-real/: base.h  esp_attr.h  sdkconfig.h
hello_world/: sdkconfig  sdkconfig.old
spi_master/: sdkconfig
tmc2130/: CMakeLists.txt  main.cpp  sdkconfig  sdkconfig.sparkfun
tmc2130/esp_hal/: CMakeLists.txt  esp_hal.h  esp_hardware_context.cpp  gpiopin.cpp  gpiopin.h  pin.cpp  pin.h  spi.cpp  spi.h  tasks.cpp
tmc2130/hal/: CMakeLists.txt
tmc2130/hal/hal/: app.h  hal.h  spi.h  tasks.h
tmc2130/main/: CMakeLists.txt  Pin.cpp  Pin.h  hal.cpp  hal.h  hal_pointer.cpp  hal_pointer.h  main.cpp  pimpl.h  pimpl_impl.h
tmc2130/main/esp_hal/: CMakeLists.txt  esp_hardware_context.cpp  pin.cpp  spi.h
tmc2130/main/hal/hal/: gpiopin.h  hal.h  pin.h  spi.h
tmc2130/old/: hal.h  hal_pimpl.cpp  hal_pimpl.h  hal_pointer.cpp  hal_pointer.h  pimpl.h
